test/deployment_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xac-test-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vrus-test
  template:
    metadata:
      labels:
        app: vrus-test
    spec:
      #volumes:
      #  - name: test-vol
      #    persistentVolumeClaim:
      #      claimName: test-volume-claim
      containers:
        - name: default
          #image: testweb:1.0
          image: drych/flask-web-server:v.0.143
          imagePullPolicy: Always
          #image: roman1grekov/testweb:latest
          #imagePullPolicy: IfNotPresent
          #command: ["/app/start.sh"]
          ports:
            - name: http
              containerPort: 80
          #volumeMounts:
          #  - mountPath: "/mydir"
          #    name: test-vol
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          env:
          - name: test
            value: vrus-test
          #livenessProbe:
          #  httpGet:
          #    path: /
          #    port: 8085
          #startupProbe:
          #  httpGet:
          #    path: /health
          #    port: 8085
          #readinessProbe:
          #  exec:
          #    command: 
          #    - sh
          #    - -c
          #    - test -f /web.py
            #httpGet:
            #  path: /rediness
            #  port: 8085
          # initialDelaySeconds: 15
          # periodSeconds: 5
