test/service_v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: vrus-test
  type: ClusterIP
  ports:
    - name: http
      port: 443
      targetPort: http
